# painting

./: .gitignore  CMakeLists.txt
include/: type.h
include/camera/: camera.h  realsense.h
src/camera/: realsense.cpp
test/camera/: test_realsense.cpp
